tests/build/widget/unknown_inherit.stderr
error[E0433]: failed to resolve: could not find `not` in the crate root
 --> $DIR/unknown_inherit.rs:5:21
  |
5 |     inherit!(super::not::a::thing);
  |                     ^^^ could not find `not` in the crate root
